--- a/use-case-2.ipynb
+++ b/use-case-2.ipynb
@@ -186,7 +186,7 @@
      "output_type": "stream",
      "text": [
       "/api/User/a27ef124-989c-4e88-be05-1a00dd9075e8\n",
-      "{\"type\":\"https://tools.ietf.org/html/rfc7231#section-6.5.13\",\"title\":\"Unsupported Media Type\",\"status\":415,\"traceId\":\"00-5bf8e036b2f709f0a2b977de50e94b22-1d5d7390c64cc64f-00\"}\n"
+      "{\"type\":\"https://tools.ietf.org/html/rfc7231#section-6.5.13\",\"title\":\"Unsupported Media Type\",\"status\":415,\"traceId\":\"00-dd3f6ca816b38269da6b3172e861998e-34c29c4e0abde292-00\"}\n"
      ]
     }
    ],
@@ -215,15 +215,18 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'HRM_API_DOC.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# print(open_meteo_docs.OPEN_METEO_DOCS)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m hrm_doc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHRM_API_DOC.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m api_doc \u001b[38;5;241m=\u001b[39m hrm_doc\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(api_doc)\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\chatbot\\lib\\site-packages\\IPython\\core\\interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    278\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    279\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m     )\n\u001b[1;32m--> 284\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'HRM_API_DOC.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BASE URL: https://hrm-nois-fake.azurewebsites.net/\n",
+      "\n",
+      "HRM system\n",
+      "API DOCUMENTATION\n",
+      "Endpoints:\n",
+      "- /api/User: does not accept any input. Use GET with this endpoint to get a list of users within the HRM system.\n",
+      "- /api/User/<id>: accepts an ID string as a path variable. Use GET with this endpoint along with a user's ID to get data of a specific user.\n",
+      "- /api/LeaveApplication/<userId>: accepts an ID string as a path variable. Use GET with this endpoint along with a user's ID to get all leave applications submitted by a user.\n",
+      "API token length: 128\n"
      ]
     }
    ],
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ff094723",
    "metadata": {},
    "outputs": [
@@ -326,7 +329,7 @@
     "    elif lst[0] == lst[1]:\n",
     "        return \"User's ID and reviewer's ID cannot be the same.\"\n",
     "    \n",
-    "    elif not lst[2].isalpha():\n",
+    "    elif not lst[2].isdigit():\n",
     "        return \"Leave days must be a number. Ask the user if they didn't provide you with a number.\"\n",
     "    \n",
     "    lst[2] = int(lst[2])\n",
@@ -395,13 +398,17 @@
     "\n",
     "agent = ZeroShotAgent(llm_chain=llm_chain, tools=tools, verbose=True, stop=[\"\\nObservation:\", \"<|im_end|>\", \"<|im_sep|>\"])\n",
     "agent_chain = AgentExecutor.from_agent_and_tools(\n",
-    "    agent=, tools=tools, verbose=True, handle_parsing_errors=\"Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\"\n",
+    "    agent=agent, tools=tools, verbose=True, handle_parsing_errors=\"Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\"\n",
+    ")\n",
+    "\n",
+    "agent2 = initialize_agent(\n",
+    "    tools, llm3, agent=AgentType.CHAT_ZERO_SHOT_REACT_DESCRIPTION, verbose=True\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "8f021211",
    "metadata": {},
    "outputs": [
@@ -412,45 +419,81 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new  chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: The user wants to submit a leave application.\n",
-      "Action: HRM submit leave\n",
-      "Action Input: Bao Ho's id, reviewer's id, number of leave days\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3mIncorrect ID. You can find the correct ID by using the HRM get by email tool.\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mThe user needs to find the correct ID before submitting the leave application.\n",
-      "Action: HRM get by email\n",
-      "Action Input: honguyenngocbao@gmail.com\u001b[0m\n",
-      "Observation: \u001b[38;5;200m\u001b[1;3m{'id': 'c8604118-7db6-4e08-8926-5bd8c81bce81', 'name': 'Bao Ho', 'email': 'honguyenngocbao@gmail.com', 'fullName': 'HỒ NGUYỄN NGỌC BẢO', 'jobTitle': '', 'mobilePhone': '', 'birthday': '', 'offDay': 0, 'yearOffDay': 0, 'maxDayOff': 0, 'remainDayOffLastYear': 0, 'offDayUseRamainDayOffLastYear': 0, 'gender': 0, 'personalEmail': '', 'avatar': '', 'acceptOfferDate': '', 'quitJobDate': '', 'bonusDayOff': 0, 'managerId': '', 'managerFullName': '', 'departmentId': 0, 'departmentName': '', 'groupUserId': '', 'groupUserName': '', 'hasLeft': '', 'identityCard': '', 'dateOfIssue': '', 'issuedBy': '', 'placeOfTemporaryResidence': '', 'placeOfResidence': '', 'relativeName': '', 'relationship': '', 'relativeMobilePhone': '', 'hasBankAccount': '', 'bankName': '', 'bankBranch': '', 'bankAccountNumber': '', 'birthPlace': '', 'isFirstLogin': '', 'roles': '', 'taxIdentificationNumber': '', 'education': '', 'jobId': '', 'jobName': '', 'levelId': '', 'levelName': ''}\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `The user wants to submit a leave application but doesn't have the correct ID. I should use the HRM get by email tool to find the correct ID for the user.`\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mCould not parse LLM output: `Thought: They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave request, 4\n",
+      "`\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `I made a mistake in my previous response. I should not have included the observation in the thought section. I will correct it in the next response.`\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
-      "Thought:\u001b[32;1m\u001b[1;3mThe user wants to submit a leave application but doesn't have the correct ID. I should use the HRM get by email tool to find the correct ID for the user.\n",
-      "Action: HRM get by email\n",
-      "Action Input: honguyenngocbao@gmail.com\u001b[0m\n",
-      "Observation: \u001b[38;5;200m\u001b[1;3m{'id': 'c8604118-7db6-4e08-8926-5bd8c81bce81', 'name': 'Bao Ho', 'email': 'honguyenngocbao@gmail.com', 'fullName': 'HỒ NGUYỄN NGỌC BẢO', 'jobTitle': '', 'mobilePhone': '', 'birthday': '', 'offDay': 0, 'yearOffDay': 0, 'maxDayOff': 0, 'remainDayOffLastYear': 0, 'offDayUseRamainDayOffLastYear': 0, 'gender': 0, 'personalEmail': '', 'avatar': '', 'acceptOfferDate': '', 'quitJobDate': '', 'bonusDayOff': 0, 'managerId': '', 'managerFullName': '', 'departmentId': 0, 'departmentName': '', 'groupUserId': '', 'groupUserName': '', 'hasLeft': '', 'identityCard': '', 'dateOfIssue': '', 'issuedBy': '', 'placeOfTemporaryResidence': '', 'placeOfResidence': '', 'relativeName': '', 'relationship': '', 'relativeMobilePhone': '', 'hasBankAccount': '', 'bankName': '', 'bankBranch': '', 'bankAccountNumber': '', 'birthPlace': '', 'isFirstLogin': '', 'roles': '', 'taxIdentificationNumber': '', 'education': '', 'jobId': '', 'jobName': '', 'levelId': '', 'levelName': ''}\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mThe correct ID for Bao Ho is c8604118-7db6-4e08-8926-5bd8c81bce81. Now I can submit the leave application.\n",
-      "Action: HRM submit leave\n",
-      "Action Input: c8604118-7db6-4e08-8926-5bd8c81bce81, reviewer's id, number of leave days\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3mIncorrect ID. You can find the correct ID by using the HRM get by email tool.\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mThe user needs to find the correct ID of the reviewer before submitting the leave application.\n",
-      "Action: HRM get by email\n",
-      "Action Input: reviewer's email\u001b[0m\n",
-      "Observation: \u001b[38;5;200m\u001b[1;3mUser not found. Recheck your inputs or ask the user for info.\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `The user needs to provide the correct email of the reviewer in order to find their ID.`\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `Could not parse LLM output: `I made a mistake in my previous response. I should not have included the observation in the thought section. I will correct it in the next response.``\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `The user needs to provide the correct email of the reviewer in order to find their ID.`\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `The user needs to provide the correct email of the reviewer in order to find their ID.`\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `The user needs to provide the correct email of the reviewer in order to find their ID.`\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `Could not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4``\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `The user needs to provide the correct email of the reviewer in order to find their ID.`\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `The user needs to provide the correct email of the reviewer in order to find their ID.`\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
-      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `The user needs to provide the correct email of the reviewer in order to find their ID.`\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `Could not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4``\u001b[0m\n",
+      "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `Could not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4``\u001b[0m\n",
+      "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
+      "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
+      "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4`\u001b[0m\n",
+      "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
+      "Thought:\u001b[32;1m\u001b[1;3mCould not parse LLM output: `Could not parse LLM output: `They want to submit a leave request.\n",
+      "Action: I should provide them with the format to submit a leave request.\n",
+      "\n",
+      "Action: HRM submit leave, 4``\u001b[0m\n",
       "Observation: Check your output and make sure it conforms! Get rid of the beginning and end ` in your output.\n",
       "Thought:\u001b[32;1m\u001b[1;3m\u001b[0m\n",
       "\n",
@@ -463,13 +506,13 @@
        "'Agent stopped due to iteration limit or time limit.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agent_chain.run(\"I'd like to submit a leave application.\")"
+    "agent_chain.run(\"Tôi muốn nộp đơn xin nghỉ phép\")"
    ]
   },
   {
