--- a/usecase2-restrictable.ipynb
+++ b/usecase2-restrictable.ipynb
@@ -25,7 +25,8 @@
     "import pandas as pd\n",
     "import os\n",
     "from azure.core.credentials import AzureKeyCredential\n",
-    "from azure.search.documents import SearchClient"
+    "from azure.search.documents import SearchClient\n",
+    "import numpy as np"
    ]
   },
   {
@@ -124,13 +125,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-14\n"
+      "2023-07-17\n"
      ]
     }
    ],
    "source": [
     "url = \"https://hrm-nois-fake.azurewebsites.net/\"\n",
-    "email = 'nghiem.vo@nois.vn'\n",
+    "email = 'bao.ho@nois.vn'\n",
     "dtime = datetime.datetime\n",
     "date = dtime.now().strftime(\"%Y-%m-%d\")\n",
     "print(date)\n",
@@ -222,9 +223,31 @@
     "    num_days = 0\n",
     "    \n",
     "    if end_dtime == start_dtime:\n",
+    "        reply = input(\"Do you want to take the whole day off or only half day off? Type 1 for whole day off, and 0 for half day off.\")\n",
+    "        \n",
+    "        while reply != \"1\" and reply != \"0\":\n",
+    "            reply = input(\"Invalid input. Type 1 for whole day off, and 0 for half day off.\\n\")\n",
+    "            \n",
     "        num_days = 0.5\n",
+    "            \n",
+    "        if reply == \"1\":\n",
+    "            num_days = 1\n",
+    "        \n",
     "    else:\n",
-    "        num_days = (end_dtime - start_dtime).days\n",
+    "        num_days = int(np.busday_count(start_date, end_date)) + 1\n",
+    "        \n",
+    "    string = f'''Leave application details:\n",
+    "    - UserId: {user_id}\n",
+    "    - ManagerId: {manager_id}\n",
+    "    - Start date: {start_date}\n",
+    "    - End date: {end_date}\n",
+    "    - Number of day(s) off: {num_days}\n",
+    "Is this information correct? Type 1 to submit, type which field to modify if you want to edit the submission information.\\n'''\n",
+    "    \n",
+    "    user_confirm = input(string)\n",
+    "    \n",
+    "    if user_confirm.strip() != \"1\":\n",
+    "        return user_confirm\n",
     "        \n",
     "    response = requests.post('https://hrm-nois-fake.azurewebsites.net/api/LeaveApplication/Submit', json = {\n",
     "        \"userId\": user_id,\n",
@@ -238,7 +261,7 @@
     "        \"numberOffDay\": num_days\n",
     "    })\n",
     "    \n",
-    "    return response\n",
+    "    return response.json()['message']\n",
     "    \n",
     "lst = []\n",
     "def submitLeaveApplication(args: str):\n",
@@ -261,11 +284,17 @@
     "    if dtime.strptime(lst[2], \"%Y-%m-%d\") < dtime.strptime(date, \"%Y-%m-%d\"):\n",
     "        return \"Start date cannot be earlier than current date, ask the user for another date.\"\n",
     "    \n",
+    "    if dtime.strptime(lst[2], \"%Y-%m-%d\").weekday() in [5, 6]:\n",
+    "        return \"Start date cannot be on the weekend, ask the user for another date.\"\n",
+    "    \n",
     "    if '-' not in lst[3]:\n",
     "        return \"Ask the user when they want to end their leave. Infer the date based on the user's answer.\"\n",
     "    \n",
     "    if dtime.strptime(lst[3], \"%Y-%m-%d\") < dtime.strptime(lst[2], \"%Y-%m-%d\"):\n",
     "        return \"End date cannot be earlier than start date, ask the user for another date.\"\n",
+    "    \n",
+    "    if dtime.strptime(lst[3], \"%Y-%m-%d\").weekday() in [5, 6]:\n",
+    "        return \"End date cannot be on the weekend, ask the user for another date.\"\n",
     "    \n",
     "    print(\"\\nUserId: \", lst[0])\n",
     "    print(\"ReviewerId: \", lst[1])\n",
@@ -274,8 +303,8 @@
     "    \n",
     "    reply = post_method(lst[0], int(lst[1]), lst[2], lst[3])\n",
     "    \n",
-    "#     return reply.text\n",
-    "    return '{\"message\": \"OK\"}'\n",
+    "    return reply\n",
+    "#     return '{\"message\": \"OK\"}'\n",
     "\n",
     "def end_convo(query: str = None):\n",
     "    return \"\"\"Output Final Answer: Conversation ended after this message.\"\"\"\n",
@@ -327,7 +356,7 @@
     "tool1.extend(human)\n",
     "\n",
     "prefix1 = f\"\"\"You are an intelligent assistant helping user find his/her information in HRM system by using tool. \n",
-    "The user chatting with you is {get_userName(email)} with the email: {email}. If question/data are not about them, tell them you don't have access.\n",
+    "The user chatting with you is {get_userName(email)} with the email {email}. If question/data are not about them, tell them you don't have access.\n",
     "DO NOT use data of the user {email} to answer questions about other users.\n",
     "You have access to the following tools:\"\"\"\n",
     "\n",
@@ -405,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "c91d46a0",
    "metadata": {},
    "outputs": [],
@@ -416,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "36295a28",
    "metadata": {
     "scrolled": true
@@ -430,6 +459,7 @@
       "\n",
       "\u001b[1m> Entering new  chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3mThought: The user chatting with me has the email nghiem.vo@nois.vn.\n",
+      "Thought: I need to find the user's off-days data.\n",
       "Action: HRM get user data\n",
       "Action Input: nghiem.vo@nois.vn\u001b[0m\n",
       "Observation: \u001b[36;1m\u001b[1;3mUser info:\n",
@@ -440,10 +470,10 @@
       "- jobTitle: Lập trình viên\n",
       "- mobilePhone: 0843961713\n",
       "- birthday: 1999\n",
-      "- offDay: 10\n",
+      "- offDay: 0\n",
       "- yearOffDay: 0\n",
       "- maxDayOff: 10\n",
-      "- remainingOffDays: 0\n",
+      "- remainingOffDays: 10\n",
       "- remainDayOffLastYear: 0\n",
       "- offDayUseRamainDayOffLastYear: 0\n",
       "- gender: 0\n",
@@ -481,8 +511,8 @@
       "- levelId: \n",
       "- levelName: Internship\n",
       "\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI have found the user's remaining off-days.\n",
-      "Final Answer: You have 0 remaining off-days.\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have found the user's remaining off days data.\n",
+      "Final Answer: You have 10 remaining off days.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -490,10 +520,10 @@
     {
      "data": {
       "text/plain": [
-       "'You have 0 remaining off-days.'"
+       "'You have 10 remaining off days.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "78b1d4d4",
    "metadata": {},
    "outputs": [
@@ -512,7 +542,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Friday 2023-07-14\n"
+      "Monday 2023-07-17\n"
      ]
     }
    ],
@@ -538,8 +568,7 @@
     "1. user's id: you get by the tool HRM get userId. \n",
     "2. the id of manager who approve user's application: firstly, ask user the name of the manager and then use the tool HRM get by name to find manager's id.\n",
     "3. start date: ask the user when they want to start their leave and infer the date from the user's answer.\n",
-    "4. end date: ask the user when they want to end their leave and infer the date from the user's answer.\n",
-    "'''\n",
+    "4. end date: ask the user when they want to end their leave and infer the date from the user's answer.'''\n",
     "    ),\n",
     "#     Tool(\n",
     "#         name='End conversation',\n",
@@ -567,7 +596,7 @@
     "# date2 = \"Friday, 2023-12-29\"\n",
     "\n",
     "prefix2 = f\"\"\"You are an intelligent assistant helping user submit leave applications to HRM system through using tools. \n",
-    "The user chatting with you own the email: {email}. \n",
+    "The user chatting with you has the email: {email}. \n",
     "Suppose the current date is {date2} (Weekday Year-Month-Day).\n",
     "You have access to the following tools:\"\"\"\n",
     "\n",
@@ -579,7 +608,7 @@
     "Thought: Find the user's id by {email}.\n",
     "Action: HRM get userId\n",
     "Action Input: {email}\n",
-    "Observation: 65255df1-d4c3-479b-a4b8-d63cb3db2beb\n",
+    "Observation: {get_userId(email)}\n",
     "\n",
     "Thought: After having user's id, ask the user for the manager's name.\n",
     "Action: human\n",
@@ -602,7 +631,7 @@
     "\n",
     "Thought: Got all details for submitting.\n",
     "Action: HRM submit leave\n",
-    "Action Input: 65255df1-d4c3-479b-a4b8-d63cb3db2beb, 139, 2023-07-17, 2023-07-18\n",
+    "Action Input: {get_userId(email)}, 139, 2023-07-17, 2023-07-18\n",
     "Observation: Successfully submitted.\n",
     "Thought: Leave application is submitted.\n",
     "Final Answer: Leave application is submitted.\n",
@@ -617,7 +646,7 @@
     "Thought: Find the user's id by {email}.\n",
     "Action: HRM get userId\n",
     "Action Input: {email}\n",
-    "Observation: 65255df1-d4c3-479b-a4b8-d63cb3db2beb\n",
+    "Observation: {get_userId(email)}\n",
     "\n",
     "Thought: After having user's id, ask the user for the manager's name.\n",
     "Action: human\n",
@@ -640,8 +669,8 @@
     "\n",
     "Thought: Got all details for submitting.\n",
     "Action: HRM submit leave\n",
-    "Action Input: 65255df1-d4c3-479b-a4b8-d63cb3db2beb, 139, 2023-07-17, 2023-07-18\n",
-    "Observation: Successfully submitted.\n",
+    "Action Input: {get_userId(email)}, 139, 2023-07-17, 2023-07-18\n",
+    "Observation: OK\n",
     "Thought: Leave application is submitted.\n",
     "Final Answer: Leave application is submitted.\n",
     "\n",
@@ -672,14 +701,14 @@
     "    agent=agent2,\n",
     "    tools=tool2, \n",
     "    verbose=True,\n",
-    "    handle_parsing_errors=\"True\",\n",
+    "    handle_parsing_errors=\"Invalid Format: Missing 'Action:' or 'Final Answer:' after 'Thought:'\",\n",
     "    memory=history2\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "ae25de60",
    "metadata": {},
    "outputs": [],
@@ -689,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "8a6d3ab3",
    "metadata": {
     "scrolled": false
@@ -702,50 +731,33 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new  chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: The user chatting with you own the email nghiem.vo@nois.vn.\n",
-      "Thought: Find the user's id by nghiem.vo@nois.vn.\n",
+      "\u001b[32;1m\u001b[1;3mThought: The user wants to submit a leave application with specific start and end dates and needs to find their user id and manager id.\n",
       "Action: HRM get userId\n",
-      "Action Input: nghiem.vo@nois.vn\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m65255df1-d4c3-479b-a4b8-d63cb3db2beb\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mNow, find the manager's id by manager's name \"Trần Đăng Ninh\".\n",
+      "Action Input: bao.ho@nois.vn\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m7cc99c43-1951-4bc1-a1c9-ca3487b1d6f3\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mNow I need to find the manager's id by their name.\n",
       "Action: HRM get by name\n",
       "Action Input: Trần Đăng Ninh\u001b[0m\n",
       "Observation: \u001b[33;1m\u001b[1;3m119\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mAsk the user for the start date of the leave.\n",
-      "Action: human\n",
-      "Action Input: When do you want to start your leave?\u001b[0m\n",
-      "\n",
-      "When do you want to start your leave?\n",
-      "Today\n",
-      "\n",
-      "Observation: \u001b[33;1m\u001b[1;3mToday\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI need to calculate the start date in the correct format.\n",
-      "Action: Calculate time\n",
-      "Action Input: datetime.date.today().strftime('%Y-%m-%d')\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m2023-07-14\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mAsk the user for the end date of the leave.\n",
-      "Action: human\n",
-      "Action Input: When do you want to end your leave?\u001b[0m\n",
-      "\n",
-      "When do you want to end your leave?\n",
-      "Next Friday\n",
-      "\n",
-      "Observation: \u001b[33;1m\u001b[1;3mNext Friday\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI need to calculate the end date in the correct format.\n",
-      "Action: Calculate time\n",
-      "Action Input: (datetime.date.today() + datetime.timedelta(days=7)).strftime('%Y-%m-%d')\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m2023-07-21\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mGot all details for submitting.\n",
+      "Thought:\u001b[32;1m\u001b[1;3mNow I have all the necessary information to submit the leave application.\n",
       "Action: HRM submit leave\n",
-      "Action Input: 65255df1-d4c3-479b-a4b8-d63cb3db2beb, 119, 2023-07-14, 2023-07-21\u001b[0m\n",
-      "UserId:  65255df1-d4c3-479b-a4b8-d63cb3db2beb\n",
+      "Action Input: 7cc99c43-1951-4bc1-a1c9-ca3487b1d6f3, 119, 2023-07-21, 2023-07-24\u001b[0m\n",
+      "UserId:  7cc99c43-1951-4bc1-a1c9-ca3487b1d6f3\n",
       "ReviewerId:  119\n",
-      "Start date:  2023-07-14\n",
-      "End date:  2023-07-21\n",
+      "Start date:  2023-07-21\n",
+      "End date:  2023-07-24\n",
+      "Leave application details:\n",
+      "    - UserId: 7cc99c43-1951-4bc1-a1c9-ca3487b1d6f3\n",
+      "    - ManagerId: 119\n",
+      "    - Start date: 2023-07-21\n",
+      "    - End date: 2023-07-24\n",
+      "    - Number of day(s) off: 2\n",
+      "Is this information correct? Type 1 to submit, type which field to modify if you want to edit the submission information.\n",
+      "1\n",
       "\n",
-      "Observation: \u001b[38;5;200m\u001b[1;3m{\"message\": \"OK\"}\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mLeave application is submitted.\n",
-      "Final Answer: Leave application is submitted.\u001b[0m\n",
+      "Observation: \u001b[38;5;200m\u001b[1;3mOK\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mLeave application has been submitted successfully.\n",
+      "Final Answer: Leave application has been submitted successfully.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -753,7 +765,7 @@
    ],
    "source": [
     "history.clear()\n",
-    "answer = agent_chain2.run(input=\"I'd like to submit leave application. My manager is Trần Đăng Ninh.\")"
+    "answer = agent_chain2.run(input=\"I'd like to submit leave application. My manager is Trần Đăng Ninh. I want to start on 2023-07-21, I'll be back after 2023-07-24.\")"
    ]
   },
   {
@@ -768,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "b293b30d",
    "metadata": {},
    "outputs": [
@@ -781,13 +793,81 @@
     }
    ],
    "source": [
-    "delAll(\"65255df1-d4c3-479b-a4b8-d63cb3db2beb\")"
+    "delAll(\"7cc99c43-1951-4bc1-a1c9-ca3487b1d6f3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a5790760",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"message\":\"OK\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_date = \"2023-07-17\"\n",
+    "end_date = \"2023-07-18\"\n",
+    "\n",
+    "start_dtime = dtime.strptime(start_date, \"%Y-%m-%d\")\n",
+    "end_dtime = dtime.strptime(end_date, '%Y-%m-%d')\n",
+    "\n",
+    "num_days = 0\n",
+    "\n",
+    "if end_dtime == start_dtime:\n",
+    "    num_days = 0.5\n",
+    "else:\n",
+    "\n",
+    "    num_days = int(np.busday_count(start_date, end_date)) + 1\n",
+    "\n",
+    "response = requests.post('https://hrm-nois-fake.azurewebsites.net/api/LeaveApplication/Submit', json = {\n",
+    "    \"userId\": '7cc99c43-1951-4bc1-a1c9-ca3487b1d6f3',\n",
+    "    \"reviewUserId\": '139',\n",
+    "    \"fromDate\": start_date,\n",
+    "    \"toDate\": end_date,\n",
+    "    \"leaveApplicationTypeId\": 1,\n",
+    "    \"leaveApplicationNote\": \"string\",\n",
+    "    \"periodType\": 0,\n",
+    "    \"numberOffDay\": num_days\n",
+    "})\n",
+    "\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dcac9662",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "337\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tiktoken\n",
+    "\n",
+    "enc = tiktoken.encoding_for_model(\"gpt-3.5-turbo\")\n",
+    "\n",
+    "def count_tokens(s):\n",
+    "    return len(enc.encode(s))\n",
+    "\n",
+    "print(count_tokens(temp2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57b48ba2",
+   "id": "d7766af5",
    "metadata": {},
    "outputs": [],
    "source": []
